removed uri property

--- a/product-service.yml
+++ b/product-service.yml
@@ -1,5 +1,5 @@
 spring:
   data:
     mongodb:
-      uri: # set your mongodb url here mongodb://username:password@localhost:27017/yourDB
+      # uri: set your mongodb url here mongodb://username:password@localhost:27017/yourDB
       database: product-service
